<DatePicker/> Move z-index prop to the correct element in css (#2286)

--- a/src/DatePicker/DatePicker.scss
+++ b/src/DatePicker/DatePicker.scss
@@ -4,8 +4,11 @@
   display: inline-block;
 }
 
-.date-picker-calendar {
+.calendar-root {
   z-index: 1;
+}
+
+.date-picker-calendar {
   :global .DayPicker {
     @include popoverTheme;
   }
